// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when loading renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgba(51,51,51,0.25)",
          "borderRadius": 5,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgba(51,51,51,0.25)",
          "borderRadius": 5,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="loading"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when there's an error renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(208, 2, 27, 0.75)",
          "borderRadius": 5,
          "flex": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "rgb(255, 255, 255)",
          }
        }
      >
        PANIC! There's a problem!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderColor": "rgb(208, 2, 27)",
          "borderRadius": 5,
          "borderWidth": 2,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderColor": "rgb(208, 2, 27)",
          "borderRadius": 5,
          "borderWidth": 2,
          "flex": 1,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <ButtonSubmit
      display="error"
      label="Entrar"
      onPress={[Function]}
    />
  </View>
</View>
`;
